# Formality-Net-legacy

haskell/: LICENSE  haskell.cabal
haskell/src/: FormalityNet.hs
haskell/test/: Spec.hs
