name:                haskell
version:             0.1.0.0
homepage:            https://github.com/johnchandlerburnham/haskell#readme
author:              John C. Burnham
license:             AGPL-3
license-file:        LICENSE
maintainer:          jcb@johnchandlerburnham.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: FormalityNet
  build-depends:
    base
    , containers
    , transformers

